cmake_minimum_required(VERSION 2.8)
project(logger)

SET( CMAKE_BUILD_TYPE Debug )
ENABLE_TESTING()
if(APPLE)
  add_definitions(-g -ggdb -Wall -Werror -Wno-unused-variable -Wno-unused-private-field)
else(APPLE)
  add_definitions(-g -Wall -Werror -Wno-unused-variable)
endif(APPLE)
add_subdirectory(gtest)
add_subdirectory(src)
